--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
-    "react": "^17.0.1",
+    "react": "18.2.0",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "18.2.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
